# yt-ruby-subs

./: .gitignore  README.md  README.zh-CN.md  defaults.json  pyproject.toml
skills/subtitle-correction/: SKILL.md
skills/subtitle-correction/agents/: openai.yaml
src/yt_ruby_subs/: clean.py  cli.py  config.py  constants.py  download.py  errors.py  generate.py  models.py  ocr.py  player.py  player_template.html  process_utils.py  prompts.py  timing.py
tests/: test_clean.py  test_cli.py  test_config.py  test_download.py  test_generate.py  test_generate_backend.py  test_ocr.py  test_player.py  test_process_utils.py  test_prompts.py  test_timing.py
